--- a/doc/01-Introduction.tex
+++ b/doc/01-Introduction.tex
@@ -57,7 +57,7 @@ paths, as nearby points in the embedded dimension can be far from the origin lin
 The Gilbert curve algorithm works by choosing sub rectangular cuboid regions, or blocks,
 to recursively find a connecting path.
 If one extent of the cuboid becomes too large or small relative to the other lengths,
-a special subdivison is performed to try make further subdivisions more cube-like.
+a special subdivision is performed to try make further subdivisions more cube-like.
 Subdivisions are performed until a base case is reached and the lowest unit of the curve
 can be realized.
 
