--- a/doc/03-Algorithm.tex
+++ b/doc/03-Algorithm.tex
@@ -20,7 +20,7 @@ traced out in a sub-region.
 We then discuss the 2D Gilbert curve and end with the 3D Gilbert curve.
 
 When talking about the 2D Gilbert curves, we assume vectors are in $\mathbb{Z}^3$
-so they can be used in the more general 3D.
+so they can be used without alteration for algorithms working in 3D.
 
 %In what follows, a path is assumed to start at the local reference point $(0,0,0)$
 %and end at the far edge of the the width like dimension, $\alpha$ (e.g. $(w-1,0,0)$).
@@ -39,7 +39,7 @@ so they can be used in the more general 3D.
 The feasibility of determining whether there exists a Hamiltonian path in a rectangular cuboid
 grid region can be accomplished through parity arguments.
 Label grid cell points in a volume as 0 or 1,
-alternativing between labels with every axis-aligned single step move.
+alternating between labels with every axis-aligned single step move.
 Any Hamiltonian path that ends at one of the three remaining corners has to have the same parity as the starting point if the
 volume is odd, or different parity if the volume is even.
 
@@ -54,28 +54,28 @@ volume is odd, or different parity if the volume is even.
        & \textit{odd} & \textbf{No} & Yes \\
      \hline
   \end{tabular}
-  \caption{ Table showing when a Hamiltonian cycle is possbile. Here, $|\alpha|$ is the absolute difference in start and end position of the path which
+  \caption{ Table showing when a Hamiltonian cycle is possible. Here, $|\alpha|$ is the absolute difference in start and end position of the path which
             coincides with one of the axis aligned side length of the cuboid volume. A Hamiltonian path is not possible on only in the case
             when $|\alpha|$ is odd and the volume is even. }
   \label{table:pathTable}
 \end{table}
 
 
-For a path starting at $(0,0,0)$ and ending $|\alpha| \in \mathbb{N}$ steps in one of the axis-aligned dimensions,
+For a path starting at $(0,0,0)$ and ending $|\alpha|$ steps in one of the axis-aligned dimensions,
 then Table \ref{table:pathTable} enumerates this condition under which a valid path is possible.
 Figure \ref{fig:exampleHampath} illustrates this for starting position $(0,0)$ with volumes $(2 \times 2)$, $(3 \times 2)$ and $(3 \times 3)$,
 where a red cross indicating a precluded endpoint.
 
 Without loss of generality, we will assume a curve starts from position $p_s=(0,0,0)$ and has proposed
 endpoint at $p_e=((w-1),0,0)$, with a cuboid region as $\alpha = (w,0,0), \beta = (0,h,0), \gamma = (0,0,d)$.
-We know a Hamiltonian path is precluded if $(|\beta| \cdot |\gamma| \bmod{2} \not\equiv 1)$.
-That is, a Hamiltonian from $p_s$ to $p_e$ is precluded when $\alpha$ is odd and at least one of $|\beta|$ or $|\gamma|$ is even.
-
 We state, without proof, that
 a Hamiltonian path is always possible from $p_s$ to $p_e$ when $|\alpha|$ is even or when $|\alpha|$, $|\beta|$ and $|\gamma|$
-are all odd.
+are all odd  $(|\alpha| \cdot (1 - |\beta| \cdot |\gamma|) \equiv 0 \bmod 2)$.
+
 With this condition, any cuboid subdivision will always have a Hamiltonian path within it and we can recreate a Hamiltonian
-path in the larger cuboid by connecting endpoints appropriately.
+path in the larger cuboid by connecting endpoints from the ending point of one cuboid to the starting point of the succeeding cuboid.
+For cuboids that violate this condition, there will be a required notch and we will show that an admissible cuboid subdivision is possible
+for all but one of the cuboid subdivisions, recursively limiting the notch violation to a single point.
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -134,8 +134,8 @@ Even sides are only enforced if the length is larger than 2, with a length 2 or 
 case.
 The base case enumerates paths in the non trivial direction.
 
-Since $A$ and $C$ are chosen to have width-like local axis even, no new notches are introduced and notch
-that is forced is effectively ``pushed'' into the $C$ block.
+Since $A$ and $C$ are chosen to have an even width-like local axis length, no new notches are introduced and any
+obligatory notch is effectively ``pushed'' into the $C$ block.
 
 
 %The $A$ block is chosen to to have a preference for even height dimension
@@ -216,8 +216,8 @@ The generalization to 3D allows the Gilbert2D function to be used unaltered when
 \end{algorithm}
 \floatname{algorithm}{Algorithm}
 
-The $\delta(\cdot)$ is a function returning one of the six directional vectors indicating which of
-the major signed axis aligned directions the input vector points.
+The $\delta(\cdot)$ function returns one of the six directional vectors indicating which of
+the major signed axis aligned directions the input vector points to ($[\pm1,0,0], [0,\pm1,0],[0,0,\pm1]$).
 For completeness, the function is defined in Procedure \ref{alg:delta}.
 
 Algorithm \ref{alg:gilbert2d} assumes standard Euclidean two norm ($|v| = \sqrt{v_0^2 + v_1^2 + v_2^2}$)
@@ -237,19 +237,29 @@ Example outputs of the \textit{Gilbert2D} function are listed in Figure \ref{fig
 
 \subsection{3D Generalized Hilbert Function (Gilbert3D)}
 
-\begin{figure*}[ht]
-  \centering
-  \includegraphics[width=\textwidth]{gilbert3d_case.pdf}
-  \caption{ Bulk recursion J-split atlas for the 3D Gilbert algorithm }
-  \label{fig:gilbert3DCase}
-\end{figure*}
-
 \begin{figure}[h]
   \centering
   \includegraphics[width=\linewidth]{gilbert3d_explode.pdf}
   \caption{ The $J_0$-split subdivision, representing the main subdivision of the bulk recursion for the 3D Gilbert curve case. }
   \label{fig:gilbert3DJSplit}
 \end{figure}
+
+
+The concept of a $U$-split is extended into 3D by constructing a $J$-split.
+An exploded view of a $J$-split is showing in Figure \ref{fig:gilbert3DJSplit}.
+
+Side lengths of the subdivided cuboids are chosen to try and not preclude a
+Hamiltonian path.
+If a path starts at the local $[0,0,0]$, a Hamiltonian path that ends
+at $[(w-1),0,0]$ is only possible when $w$ is even or when all lengths are odd, including $w$.
+
+
+\begin{figure*}[ht]
+  \centering
+  \includegraphics[width=\textwidth]{gilbert3d_case.pdf}
+  \caption{ Bulk recursion J-split atlas for the 3D Gilbert algorithm }
+  \label{fig:gilbert3DCase}
+\end{figure*}
 
 \floatname{algorithm}{Procedure}
 \begin{algorithm}
