moved some aux functions to appendix

--- a/doc/Gilbert.tex
+++ b/doc/Gilbert.tex
@@ -92,6 +92,7 @@ and investigate overall quality metrics of the Gilbert curve construction.
 
 \appendix
 \input{07-Appendix.tex}
+\input{08-Appendix-Alg.tex}
 
 
 \end{document}
