--- a/doc/01-Introduction.tex
+++ b/doc/01-Introduction.tex
@@ -22,8 +22,8 @@ Some drawbacks are that:
 
 \begin{itemize}
   \item Our implementation is recursive,
-        which may undesirable for some applications that require better than $O( \lg N)$
-        runtime and memory usage
+        which may be undesirable for some applications requiring better than $O( \lg N)$
+        memory usage or better constant bounds for runtime performance
   \item Might not adequately capture some features of a Hilbert curve
 \end{itemize}
 
@@ -37,7 +37,7 @@ Further, we show:
 
 
 Generalizations of the Hilbert curve to non power of two rectangular cuboid regions
-has been explored before but are overly complicated algorithmically, create unbalanced
+have been explored before but are overly complicated algorithmically, create unbalanced
 curves and often don't generalize well to 3D.
 Our realization focuses on a conceptually simple algorithm which creates pleasing
 resulting curves and works in both 2D and 3D.
@@ -57,7 +57,7 @@ paths, as nearby points in the embedded dimension can be far from the origin lin
 The Gilbert curve algorithm works by choosing sub rectangular cuboid regions, or blocks,
 to recursively find a connecting path.
 If one extent of the cuboid becomes too large or small relative to the other lengths,
-a special subdivision is performed to try make further subdivisions more cube-like.
+a special subdivision is performed to try and make further subdivisions more cube-like.
 Subdivisions are performed until a base case is reached and the lowest unit of the curve
 can be realized.
 
@@ -67,7 +67,8 @@ In such a case, the Gilbert curve will introduce a single diagonal path move, ca
 
 \subsection{Definitions}
 
-We concern ourselves with a space filling curve, $\omega$, through a rectangular region $( N _ x, N _ y, N _ z)$,  $N = (N _ x \cdot N _ y \cdot N _ z)$:
+We concern ourselves with a space filling curve, $\omega = (\omega_0, \omega_1, \dots, \omega_{N-1})$,
+through a rectangular region $( N _ x, N _ y, N _ z)$,  $N = (N _ x \cdot N _ y \cdot N _ z)$.
 
 %  = & \sqrt{ (x _ {k-1} - x _ k)^2 + (y _ {k-1} - y _ k)^2 + (z _ {k-1} - z _ k)^2 } = 1 \\
 
@@ -82,5 +83,27 @@ $$
   \to & \omega _ i \ne \omega _ j
 \end{array}
 $$
+
+For convenience, we use curves in 3D with the understanding that the 2D case is a specialization
+when $N_z = 1$ and drop the third dimension when convenient and context is clear.
+
+A \textit{Hamiltonian path} is a path through a graph such that every vertex is visited exactly once.
+In the context of this paper, we concern ourselves with Hamiltonian paths through the implied
+graph from integral points in 3D restricted to a cuboid region $(N_x, N_y, N_z)$.
+Each point in the cuboid represents a vertex in the implied graph, with vertices joined in the graph
+if points are (Euclidean) distance one away from a neighboring point restricted to the cuboid.
+
+We also concern ourselves with Hamiltonian paths that specify a \textit{start} and \textit{end} point within
+a cuboid region.
+%If a Hamiltonian path is possible within a cuboid region, the region will be called \textit{feasible}.
+
+
+\textbf{TODO}
+
+\begin{itemize}
+  \item Define locality/local connectivity
+  \item Define space filling
+  \item Define admissible/feasible for Hamiltonian path?
+\end{itemize}
 
 
