--- a/doc/01-Introduction.tex
+++ b/doc/01-Introduction.tex
@@ -104,6 +104,7 @@ a cuboid region.
   \item Define locality/local connectivity
   \item Define space filling
   \item Define admissible/feasible for Hamiltonian path?
+  \item Define ``eccentric'' (oblong?)
 \end{itemize}
 
 
