--- a/doc/03-Algorithm.tex
+++ b/doc/03-Algorithm.tex
@@ -298,7 +298,7 @@ Example outputs of the \textit{Gilbert2D} function are listed in Figure \ref{fig
 \begin{figure}[h]
   \centering
   \includegraphics[width=\linewidth]{gilbert3d_eccentric.pdf}
-  \caption{ Eccentric cases for recursion. When the cuboid is too far from being cube-like, an $S$-split shape template is used to try and subdivide the cuboids into elements that are more cube like. Here $\alpha$, $\beta$, $\gamma$ are the width-like, height-like and depth-like dimensions. See the text or the algorithm description for the constant ratios used to determine what makes the  cuboid lengths eccentric. }
+  \caption{ Eccentric cases for recursion. When the cuboid is too far from being cube-like, an $S$-split shape template is used to try and subdivide the cuboids into elements that are more cube like. Here $\alpha$, $\beta$, $\gamma$ are the width-like, height-like and depth-like dimensions. See the text or the algorithm description for the ratios used to determine eccentricity. }
   \label{fig:gilbert3DEccentricCase}
 \end{figure}
 
