--- a/doc/08-Appendix-Alg.tex
+++ b/doc/08-Appendix-Alg.tex
@@ -1,6 +1,9 @@
+
+\clearpage
+
 \section{Auxiliary Algorithms and Procedures}
 
-\subsection{Helper Functions}
+\subsection{Auxiliary Functions}
 
 \floatname{algorithm}{Procedure}
 \begin{algorithm}
@@ -53,7 +56,7 @@
 
 \floatname{algorithm}{Procedure}
 \begin{algorithm}
-  \caption{ \hskip0.5em $S_1$-Split functions (eccentric split) }
+  \caption{ \hskip0.5em $S_1$-Split function (eccentric split) }
   \label{alg:procS1}
   \begin{algorithmic}
     \State
@@ -103,6 +106,8 @@
   \end{algorithmic}
 \end{algorithm}
 \floatname{algorithm}{Algorithm}
+
+\clearpage
 
 \subsection{Gilbert3D J-Split Functions}
 
