--- a/doc/07-Appendix.tex
+++ b/doc/07-Appendix.tex
@@ -4,7 +4,7 @@
 \section{Appendix}
 
 
-\subsection{Defect}
+\subsection{Defect} \label{appendix:defect}
 
 Call the \textit{defect} a function $\lambda _ d : \mathbb{N}^d \mapsto \mathbb{N}$:
 
