--- a/doc/03-Algorithm.tex
+++ b/doc/03-Algorithm.tex
@@ -349,7 +349,7 @@ When considering a cuboid region to trace out a Gilbert curve on, there are conc
   \includegraphics[width=\textwidth]{gilbert3d_case.pdf}
   \caption{ Bulk recursion J-split atlas for the 3D Gilbert algorithm. A subscript of $2e$ is used to denote a preference
   to coerce the length even where as the subscript $2u$ is used to denote a preference to coerce the length odd.
-  The subscript $2*$ is the remainder of the axis after removing the $2e$ portion (e.g. $\alpha_{2*} = \alpha - \alpha_{2e}$.
+  The subscript $2e+$ is the remainder of the axis after removing the $2e$ portion (e.g. $\alpha_{2e+} = \alpha - \alpha_{2e}$.
   The subscript $2u+$ is the remainder of the axis after removing the $2u$ portion (e.g. $\beta_{2u+} = \beta - \beta_{2u}$.
   The parity of the original cuboid volume are shown in the left most, assembled, volume, for each of the rows.
   The local axis for each of the subdivided cuboid regions is shown underneath them, with a white dot
