--- a/doc/03-Algorithm.tex
+++ b/doc/03-Algorithm.tex
@@ -446,4 +446,20 @@ A constant of $\frac{1}{3}$ is chosen to split the ``height-like'' dimensions fo
 while the other split is chosen at the halfway mark.
 The calculations showing that the constants chosen yield a defect reduction in each of the three eccentric $S$-splits is provided in Appendix \ref{appendix:defect}.
 
+\subsection{Discussion}
+
+For applications that require a strict Hamiltonian path without a notch point but are unconstrained in endpoint location can choose
+endpoints on the even length dimension so that a Gilbert curve with a Hamiltonian path realization is possible.
+Other options can include increasing one or more length dimensions with padding to make the major width-like axis ($\alpha$) even or
+by forcing all length dimensions to be odd.
+
+For the special case when dimensions are of the form $((2k+1),2)$, for $k \in \mathbb{N}$, the Gilbert curve realization will
+not have the ending point of the path at the appropriate location.
+For the $((2k+1),2)$ case, no Hamiltonian path is possible from $(0,0)$ to $(2k,0)$ but as an artifact of the algorithm,
+a "hook" is formed, causing the last two points to be in different locations.
+See Figure \ref{fig:oddxtwo_hook.pdf} for an example configuration.
+
+The hook formed for $((2k+1),2)$ configurations can be removed for a diagonal move by swapping the last two endpoints.
+For the sake of clarity and brevity, we leave the algorithm as is, without adding extra complication for this special case.
+
 
