--- a/doc/05-Conclusion.tex
+++ b/doc/05-Conclusion.tex
@@ -5,6 +5,11 @@ arbitrary rectangular regions in to two and three dimensions, respectively.
 Previous work had side length restrictions, involved complicated algorithms or lacked
 easily accessible reference implementations.
 
+Our implementation is conceptually simple, allowing for ease of implementation.
+We also provide a libre/free 
+reference implementation which can be downloaded from
+its repository \footnote{ \label{gilbert-url} \url{https://github.com/jakubcerveny/gilbert}. }
+
 The 2D and 3D Gilbert curve has similar locality metrics to the Hilbert
 curve, and provides adequate run-time and memory performance
 ($O(\lg N)$) for enumeration and random lookup.
@@ -12,10 +17,10 @@ When a strict Hamiltonian path is not possible within the desired cuboid volume,
 Gilbert curve provides a ``best-effort'' curve, restricting the inadmissible region
 to a single notch point.
 
-Our implementation is conceptually simple, allowing for ease of implementation.
-We also provide a libre/free 
-reference implementation which can be downloaded from
-its repository \footnote{ \label{gilbert-url} \url{https://github.com/jakubcerveny/gilbert}. }
+Our recursive implementation provides a proof-of-concept for the method.
+Further Attempts at memory reductions and constant run-time execution speed optimizations are not pursued in this paper.
+There is also a possibility that the shape template subdivision scheme could be extended to higher dimensions but this idea is not
+pursued in this paper.
 
 
 
